@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2005-04-05 17:57:44 GMT	John Goerzen <jgoerzen@complete.org>	patch-214
+
+    Summary:
+      Made tests work with new Hugs system; now passes tests in GHC and Hugs
+    Revision:
+      missingh--head--0.7--patch-214
+
+
+    modified files:
+     ChangeLog Makefile MissingH.cabal
+
+
 2005-04-05 17:52:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-213
 
     Summary:
